--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -11,7 +11,7 @@
 
     <ul>
       <li>Mendoza Heidy</li>
-      <li>Oban Emily</li>
+      <li>Obando Emily</li>
       <li>Tigrero Johan</li>
       <li>Salazar Miguel</li>
       <li>Sabando Edú</li>
