--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -10,6 +10,8 @@
       <input [(ngModel)]="password" type="password" placeholder="Clave" required />
     </div>
 
+    <p [class]="messageClass">{{ message }}</p>
+
     <button (click)="validateAccess()">Aceptar</button>
   </div>
 </div>
