Se agregaron roles a los usuarios harcodeados, se agregó el dashboard principal (dinámico según el rol del usuario), se agregó validación por medio de un guard para que solo se muestre el dashboard principal si un usuario está logueado

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -11,6 +11,11 @@
 
   <nav class="header-nav">
     <a routerLink="/">Inicio</a>
+
+    @if(loggedInHeader){
+    <a routerLink="/principal-dashboard">Dashboard</a>
+    }
+
     <a routerLink="/about">Acerca de</a>
 
     @if(!loggedInHeader){
