--- a/src/app/modules/production/pages/home/home.html
+++ b/src/app/modules/production/pages/home/home.html
@@ -3,29 +3,43 @@
   <p class="subtitle">Seleccione una opción</p>
 
   <div class="grid">
+
     <div class="quick-card" routerLink="/production/dashboard">
       <span class="icon">📊</span>
       <h3>Dashboard</h3>
+      <p class="sub">Resumen general</p>
     </div>
 
     <div class="quick-card" routerLink="/production/lotes">
       <span class="icon">🧬</span>
       <h3>Lotes</h3>
+      <p class="sub">Gestión de ciclos</p>
     </div>
 
     <div class="quick-card" routerLink="/production/eventos">
       <span class="icon">📋</span>
       <h3>Eventos</h3>
+      <p class="sub">Registro de actividades</p>
     </div>
 
     <div class="quick-card" routerLink="/production/muestreos">
       <span class="icon">📈</span>
       <h3>Muestreos</h3>
+       <p class="sub">Monitoreo periódico</p>
     </div>
 
     <div class="quick-card" routerLink="/production/cosecha">
       <span class="icon">🦐</span>
       <h3>Cosecha</h3>
+      <p class="sub">Proceso final</p>
     </div>
+    <div class="quick-card" routerLink="/production/lotes/detalle">
+  <span class="icon">📝</span>
+  <h3>Lotes Detalle</h3>
+  <p class="sub">Ver historial de todos los lotes registrados</p>
+</div>
+
+
+  
   </div>
 </div>
